SplitText : add padding to avoid text clipping

--- a/src/app.css
+++ b/src/app.css
@@ -44,6 +44,8 @@
 
 	.split-line {
 		overflow: clip;
+		margin-top: -10px;
+		padding: 10px 0;
 	}
 }
 
